@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.006.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.007.
 use strict;
 use warnings;
 
@@ -29,7 +29,6 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::BumpVersionAfterRelease" => 0,
     "Dist::Zilla::Plugin::CheckChangesHasContent" => 0,
     "Dist::Zilla::Plugin::ConfirmRelease" => 0,
-    "Dist::Zilla::Plugin::CopyFilesFromBuild" => 0,
     "Dist::Zilla::Plugin::DistINI" => 0,
     "Dist::Zilla::Plugin::ExecDir" => 0,
     "Dist::Zilla::Plugin::FakeRelease" => 0,
@@ -62,6 +61,7 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::Prereqs::FromCPANfile" => 0,
     "Dist::Zilla::Plugin::PruneCruft" => 0,
     "Dist::Zilla::Plugin::ReadmeAnyFromPod" => 0,
+    "Dist::Zilla::Plugin::Regenerate" => 0,
     "Dist::Zilla::Plugin::RewriteVersion" => 0,
     "Dist::Zilla::Plugin::RunExtraTests" => 0,
     "Dist::Zilla::Plugin::ShareDir" => 0,
@@ -86,7 +86,7 @@ my %WriteMakefileArgs = (
     "Test::File::ShareDir::Module" => 0,
     "Test::More" => "0.88"
   },
-  "VERSION" => "0.026",
+  "VERSION" => "0.027",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -99,7 +99,6 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::BumpVersionAfterRelease" => 0,
   "Dist::Zilla::Plugin::CheckChangesHasContent" => 0,
   "Dist::Zilla::Plugin::ConfirmRelease" => 0,
-  "Dist::Zilla::Plugin::CopyFilesFromBuild" => 0,
   "Dist::Zilla::Plugin::DistINI" => 0,
   "Dist::Zilla::Plugin::ExecDir" => 0,
   "Dist::Zilla::Plugin::FakeRelease" => 0,
@@ -132,6 +131,7 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::Prereqs::FromCPANfile" => 0,
   "Dist::Zilla::Plugin::PruneCruft" => 0,
   "Dist::Zilla::Plugin::ReadmeAnyFromPod" => 0,
+  "Dist::Zilla::Plugin::Regenerate" => 0,
   "Dist::Zilla::Plugin::RewriteVersion" => 0,
   "Dist::Zilla::Plugin::RunExtraTests" => 0,
   "Dist::Zilla::Plugin::ShareDir" => 0,
