@@ -4,7 +4,6 @@ requires 'Dist::Zilla';
 requires 'Dist::Zilla::Plugin::BumpVersionAfterRelease';
 requires 'Dist::Zilla::Plugin::CheckChangesHasContent';
 requires 'Dist::Zilla::Plugin::ConfirmRelease';
-requires 'Dist::Zilla::Plugin::CopyFilesFromBuild';
 requires 'Dist::Zilla::Plugin::DistINI';
 requires 'Dist::Zilla::Plugin::ExecDir';
 requires 'Dist::Zilla::Plugin::FakeRelease';
@@ -37,6 +36,7 @@ requires 'Dist::Zilla::Plugin::PodSyntaxTests';
 requires 'Dist::Zilla::Plugin::Prereqs::FromCPANfile';
 requires 'Dist::Zilla::Plugin::PruneCruft';
 requires 'Dist::Zilla::Plugin::ReadmeAnyFromPod';
+requires 'Dist::Zilla::Plugin::Regenerate';
 requires 'Dist::Zilla::Plugin::RewriteVersion';
 requires 'Dist::Zilla::Plugin::RunExtraTests';
 requires 'Dist::Zilla::Plugin::ShareDir';
