@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Use [Regenerate] instead of [CopyFilesFromBuild] to regenerate files in root
 
 0.026     2016-07-22 02:07:45 EDT
   - Bump required version of [Test::ReportPrereqs] for Module::Metadata version extractor option
